--- a/ITStore/ITStore/packages.config
+++ b/ITStore/ITStore/packages.config
@@ -11,8 +11,8 @@
   <package id="Microsoft.ApplicationInsights.Web" version="2.2.0" targetFramework="net452" />
   <package id="Microsoft.ApplicationInsights.WindowsServer" version="2.2.0" targetFramework="net452" />
   <package id="Microsoft.ApplicationInsights.WindowsServer.TelemetryChannel" version="2.2.0" targetFramework="net452" />
-  <package id="Microsoft.AspNet.Mvc" version="5.2.3" targetFramework="net452" />
-  <package id="Microsoft.AspNet.Mvc.pl" version="5.2.3" targetFramework="net452" />
+  <package id="Microsoft.AspNet.Mvc" version="5.0.0" targetFramework="net452" />
+  <package id="Microsoft.AspNet.Mvc.pl" version="5.0.0" targetFramework="net452" />
   <package id="Microsoft.AspNet.Razor" version="3.2.3" targetFramework="net452" />
   <package id="Microsoft.AspNet.Razor.pl" version="3.2.3" targetFramework="net452" />
   <package id="Microsoft.AspNet.Web.Optimization" version="1.1.3" targetFramework="net452" />
@@ -24,7 +24,12 @@
   <package id="Microsoft.Net.Compilers" version="1.3.2" targetFramework="net452" developmentDependency="true" />
   <package id="Microsoft.Web.Infrastructure" version="1.0.0.0" targetFramework="net452" />
   <package id="Modernizr" version="2.6.2" targetFramework="net452" />
+  <package id="Moq" version="4.1.1309.1617" targetFramework="net452" />
   <package id="Newtonsoft.Json" version="6.0.4" targetFramework="net452" />
+  <package id="Ninject" version="3.0.1.10" targetFramework="net452" />
+  <package id="Ninject.MVC3" version="3.0.0.6" targetFramework="net452" />
+  <package id="Ninject.Web.Common" version="3.0.0.7" targetFramework="net452" />
   <package id="Respond" version="1.2.0" targetFramework="net452" />
+  <package id="WebActivator" version="1.5" targetFramework="net452" />
   <package id="WebGrease" version="1.5.2" targetFramework="net452" />
 </packages>
