--- a/ITStore/ITStore.UnitTests/packages.config
+++ b/ITStore/ITStore.UnitTests/packages.config
@@ -10,5 +10,6 @@
   <package id="Ninject" version="3.0.1.10" targetFramework="net452" />
   <package id="Ninject.MVC3" version="3.0.0.6" targetFramework="net452" />
   <package id="Ninject.Web.Common" version="3.0.0.7" targetFramework="net452" />
+  <package id="System.ComponentModel.Annotations" version="4.3.0" targetFramework="net452" />
   <package id="WebActivator" version="1.5" targetFramework="net452" />
 </packages>
