--- a/ITStore/ITStore/packages.config
+++ b/ITStore/ITStore/packages.config
@@ -30,6 +30,7 @@
   <package id="Ninject.MVC3" version="3.0.0.6" targetFramework="net452" />
   <package id="Ninject.Web.Common" version="3.0.0.7" targetFramework="net452" />
   <package id="Respond" version="1.2.0" targetFramework="net452" />
+  <package id="System.ComponentModel.Annotations" version="4.3.0" targetFramework="net452" />
   <package id="WebActivator" version="1.5" targetFramework="net452" />
   <package id="WebGrease" version="1.5.2" targetFramework="net452" />
 </packages>
