--- a/ITStore/ITStore/packages.config
+++ b/ITStore/ITStore/packages.config
@@ -4,7 +4,7 @@
   <package id="bootstrap" version="3.0.0" targetFramework="net452" />
   <package id="jQuery" version="1.10.2" targetFramework="net452" />
   <package id="jQuery.Validation" version="1.11.1" targetFramework="net452" />
-  <package id="Microsoft.ApplicationInsights" version="2.2.0" targetFramework="net452" />
+  <package id="Microsoft.ApplicationInsights" version="2.2.0" targetFramework="net452" requireReinstallation="true" />
   <package id="Microsoft.ApplicationInsights.Agent.Intercept" version="2.0.6" targetFramework="net452" />
   <package id="Microsoft.ApplicationInsights.DependencyCollector" version="2.2.0" targetFramework="net452" />
   <package id="Microsoft.ApplicationInsights.PerfCounterCollector" version="2.2.0" targetFramework="net452" />
@@ -30,7 +30,7 @@
   <package id="Ninject.MVC3" version="3.0.0.6" targetFramework="net452" />
   <package id="Ninject.Web.Common" version="3.0.0.7" targetFramework="net452" />
   <package id="Respond" version="1.2.0" targetFramework="net452" />
-  <package id="System.ComponentModel.Annotations" version="4.3.0" targetFramework="net452" />
+  <package id="System.ComponentModel.Annotations" version="4.3.0" targetFramework="net452" requireReinstallation="true" />
   <package id="WebActivator" version="1.5" targetFramework="net452" />
   <package id="WebGrease" version="1.5.2" targetFramework="net452" />
 </packages>
